k8s/ingress/templates/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-kubernetes-gateway
spec:
  selector:
    istio: ingressgateway # Which ingress gateway pod are we configuring in the cluster?
                          # default configuration of istio configures a pod with the label istio=ingressgateway
  servers:
  - port:
      number: 80 # will be listening on port 80. 
                 # In the case of nodeport in local development, 
                 # node ports will be mapped to a port 80 when it reaches the ingress gateway pod
      name: http
      protocol: HTTP
    hosts:
    - "*" # Domain name of the external website
          # allows you to restrict the scope of this gateway 
          # to just work for a particular domain name
          # Put a * here for now for everything
